Refactor pagination logic and improve SQL query
Refactored pagination handling into utility methods in `PaginationUtils` for consistency and reusability. Updated SQL query in `InstanceRepository` to correct syntax and improve domain search functionality. Enhanced readability by simplifying instance response conversion logic in `SublinksInstanceService`.

Signed-off-by: rooki <rooki@rooki.xyz>